Changelog
=========

1.0b16 - Unreleased
-------------------

* Use wildcard searches for simple search terms to reflect Plone's default
  behaviour.
  [witsch]

* Fix drill-down for facet values containing white space.
  [witsch]

* Add support for partial syncing of catalog and solr indexes.
  [witsch]


1.0b15 - Released October 12, 2009
----------------------------------

* Filter control characters from all input to prevent indexing errors.
  This refs http://plone.org/products/collective.solr/issues/1
  [witsch]


1.0b14 - Released September 17, 2009
------------------------------------

* Fix query builder to use explicit `OR`\s so that it becomes possible to
  change Solr's default operator to `AND`.
  [witsch]

* Remove relevance information from search results as they don't make sense
  to the user.
  [witsch]


1.0b13 - Released August 20, 2009
---------------------------------

* Fix `reindex` and `catalogSync` maintenance views to not pass invalid data
  back to Solr when indexing an explicit list of attributes.
  [witsch]


1.0b12 - Released August 15, 2009
---------------------------------

* Fix `reindex` maintenance view to keep any existing data when indexing a
  given list of attributes.
  [witsch]

* Add support for facet dependencies: Specifying a facet "foo" like "foo:bar"
  only makes it show up when a value for "bar" has been previously selected.
  [witsch]

* Allow indexer methods to raise `AttributeError` to prevent an attribute
  from being indexed.
  [witsch]


1.0b11 - Released July 2, 2009
------------------------------

* Fix maintenance view for adding/syncing single indexes using catalog data.
  [witsch]

* Allow to configure query parameters for which filter queries should be
  used (see http://wiki.apache.org/solr/FilterQueryGuidance for more info)
  [fschulze, witsch]

* Encode unicode strings when building facet links.
  [fschulze, witsch]

* Fix facet display to try to keep the given order of facets.
  [witsch]
